# jsbsimcommander

./: .cvsignore  ChangeLog  Makefile.am  README.md  autogen.sh  configure.in
CVSROOT/: loginfo  syncmail
jsbsim_commander/: Commander.h  Makefile.am  autogen.sh  commander.rc  commander.res  initprops.h
jsbsim_commander/.deps/: Commander.Po  FGJSBBase.Po
jsbsim_commander/bitmaps/: JSBSim_logo.xpm  aircraft.xpm  axis.xpm  deadband.xpm  del.xpm  electric_engine.xpm  engine_icon.xpm  filter.xpm  func.xpm  gear_icon.xpm  integrator.xpm  metrics_icon.xpm  myclose.xpm  myopen.xpm  mysave.xpm  operator_atan.xpm  operator_eq.xpm  operator_func.xpm  operator_gt.xpm  operator_integral.xpm  operator_or.xpm  operator_product.xpm  operator_quotient.xpm  property_icon.xpm  rocket_engine.xpm  rslt_mgr.xpm  scdorder.xpm  snap.xpm  table_icon.xpm  tank.xpm  turbine_engine.xpm  washout.xpm  wxWidgets_logo.xpm
jsbsim_commander/gui/: AeroDynamics_Diag.h  AircraftDialog.h  Engine_Diag.h  Mass_Diag.h  Property_Diag.h  ResultShow_Diag.h  Table_Diag.cpp  Table_Diag.h  TreeItem.cpp  deadband.h  doc.h  fcsprop_dlg.h  func.h  func_dlg.h  gain.cpp  gain_dlg.cpp  import.h  shape.cpp  shape.h  sum.h  sum_dlg.cpp  sum_dlg.h  switch.h  view.cpp  view.h
jsbsim_commander/input_output/: FGXMLElement.cpp  FGXMLElement.h  FGXMLParse.h  Makefile.am
jsbsim_commander/math/: FGColumnVector3.cpp
jsbsim_commander/src/: FGJSBBase.cpp  FGJSBBase.h  commander.res
jsbsim_commander/src/.deps/: Commander.Po
jsbsim_commander/src/bitmaps/: Makefile.am  channel.xpm  detail.xpm  direct.xpm  do_mnv.xpm  gain.xpm  kinemat.xpm  lag.xpm  mgr.xpm  mysaveas.xpm  operator_difference.xpm  operator_ge.xpm  operator_lt.xpm  operator_sin.xpm  output_icon.xpm  propeller.xpm  success.xpm  wait.xpm
jsbsim_commander/src/gui/: AeroDynamics_Diag.cpp  Axis_Diag.cpp  Axis_Diag.h  EngineMgr_Diag.h  Function_Diag.h  LGear_Diag.cpp  Property_Diag.cpp  Propulsion_Diag.h  condition.cpp  deadband.cpp  deadband_dlg.h  doc.cpp  filter.cpp  kinemat.cpp  kinemat_dlg.cpp  kinemat_dlg.h  switch_dlg.h
jsbsim_commander/src/gui/.deps/: AeroDynamics_Diag.Po  AircraftDialog.Po  Axis_Diag.Po  EngineMgr_Diag.Po  Engine_Diag.Po  Function_Diag.Po  LGear_Diag.Po  Mass_Diag.Po  Property_Diag.Po  Propulsion_Diag.Po  ResultShow_Diag.Po  Table_Diag.Po  TreeItem.Po  Turbine_Diag.Po  When_Diag.Po  condition.Po  deadband.Po  deadband_dlg.Po  doc.Po  fcsprop_dlg.Po  filter.Po  filter_dlg.Po  func.Po  func_dlg.Po  gain.Po  gain_dlg.Po  import.Po  kinemat.Po  kinemat_dlg.Po  shape.Po  sum.Po  sum_dlg.Po  switch.Po  switch_dlg.Po  toolbar.Po  view.Po
jsbsim_commander/src/input_output/: FGPropertyManager.cpp
jsbsim_commander/src/input_output/.deps/: FGPropertyManager.Po  FGXMLElement.Po  FGXMLParse.Po
jsbsim_commander/src/math/.deps/: FGColumnVector3.Po
jsbsim_commander/src/simgear/props/: props.cxx
jsbsim_commander/src/simgear/props/.deps/: props.Po
jsbsim_commander/src/simgear/xml/: Makefile.am
jsbsim_commander/src/simgear/xml/.deps/: easyxml.Po  xmlparse.Po  xmlrole.Po  xmltok.Po
jsbsim_commander/src/wx/deprecated/: Makefile.am  lexer.l  setup.h  wxexpr.cpp
jsbsim_commander/src/wx/deprecated/.deps/: dosyacc.Po  wxexpr.Po
jsbsim_commander/src/wx/ogl/: basic.cpp  basic2.cpp  canvas.cpp
jsbsim_commander/src/wx/ogl/.deps/: basic.Po  basic2.Po  bmpshape.Po  canvas.Po  composit.Po  constrnt.Po  divided.Po  drawn.Po  lines.Po  mfutils.Po  ogldiag.Po  oglmisc.Po
jsbsim_commander/src/wx/plot/: Makefile.am
jsbsim_commander/src/wx/plot/.deps/: plot.Po
jsbsim_commander/wx/ogl/: Makefile.am  basic.h  bmpshape.cpp  lines.cpp  ogldiag.cpp  ogldiag.h
m4/: ChangeLog
po/: ChangeLog  Makevars  POTFILES.in  de.gmo  de.po  fr.gmo  fr.po  it.po  jsbsimcommander.pot  zh_CN.gmo  zh_CN.po
src/: Commander.cpp  Commander.h  Makefile.am  MyApp.cpp  MyApp.h  commander.rc  commander.res  config.h.in
src/bitmaps/: AVIC_logo.xpm  Makefile.am  NUAA_logo.xpm  acft_mgr.xpm  actuator.xpm  add.xpm  aero_icon.xpm  ap_icon.xpm  destination.xpm  dupl.xpm  eng_mgr.xpm  failure.xpm  fcs_icon.xpm  fileheader_icon.xpm  general.xpm  ledlag.xpm  mass_icon.xpm  mnv_mgr.xpm  mynew.xpm  node.xpm  nozzle.xpm  operator_abs.xpm  operator_acos.xpm  operator_and.xpm  operator_asin.xpm  operator_cos.xpm  operator_derivative.xpm  operator_ifthen.xpm  operator_le.xpm  operator_ne.xpm  operator_not.xpm  operator_pow.xpm  operator_sum.xpm  operator_tan.xpm  pause.xpm  pid.xpm  piston_engine.xpm  property.xpm  reverse.xpm  running.xpm  (+6 more)
src/gui/: AeroDynamics_Diag.cpp  AircraftDialog.cpp  EngineMgr_Diag.cpp  Engine_Diag.cpp  Function_Diag.cpp  LGear_Diag.cpp  LGear_Diag.h  Makefile.am  Mass_Diag.cpp  MyFrame.cpp  MyFrame.h  Property_Diag.cpp  Property_Diag.h  Propulsion_Diag.cpp  ResultShow_Diag.cpp  Table_Diag.cpp  Table_Diag.h  TreeItem.cpp  TreeItem.h  Turbine_Diag.cpp  Turbine_Diag.h  When_Diag.cpp  When_Diag.h  actuator.cpp  actuator.h  actuator_dlg.cpp  actuator_dlg.h  condition.cpp  condition.h  deadband.cpp  deadband.h  deadband_dlg.cpp  doc.cpp  doc.h  fcsprop_dlg.cpp  filter.cpp  filter.h  filter_dlg.cpp  filter_dlg.h  func.cpp  (+31 more)
src/input_output/: FGPropertyManager.h  FGXMLElement.cpp  FGXMLElement.h  FGXMLParse.cpp
src/math/: FGFunction.cpp  FGFunction.h  FGPropertyValue.cpp  FGPropertyValue.h  FGTable.cpp  FGTable.h  Makefile.am  Matt1D.cpp  Matt1D.h  MattMD.cpp  MattMD.h  bspline.cpp  bspline.h  bsplines.cpp  bsplines.h
src/mattplot/: Condition.cpp  Condition.h  Makefile.am  NomoFrm.cpp  NomoFrm.h  Table.cpp  Table.h  plot.cpp  plot.h
src/rc/: Makefile.am  frame.xrc  menu.xrc  propdlg.xrc  sum_dlg.xrc  toolbar.xrc  trans.cpp
src/simgear/props/: props.hxx
src/simgear/xml/: easyxml.cxx
src/wx/: Makefile.am
src/wx/ogl/: bmpshape.h  composit.cpp  constrnt.cpp  divided.cpp  drawn.cpp  ogl.h  oglmisc.cpp
src/wx/plot/: plot.cpp  plot.h
