AM_CPPFLAGS = -I$(top_srcdir)/src -I$(top_srcdir)/src/math \
              -I$(top_srcdir)/src/input_output -I$(top_srcdir)/src/simgear/xml

noinst_LIBRARIES = libInputOutput.a

libInputOutput_a_SOURCES = FGPropertyManager.cpp FGXMLElement.cpp FGXMLParse.cpp

noinst_HEADERS = FGPropertyManager.h FGXMLElement.h FGXMLParse.h 

