  
EXTRA_DIST = \
  acft_mgr.bmp         gear_icon.bmp            operator_pow.bmp \
  acft_mgr.xpm         gear_icon.xpm            operator_pow.xpm \
  add.bmp              integrator.bmp           operator_product.bmp \
  add.xpm              integrator.xpm           operator_product.xpm \
  aero_icon.bmp        kinemat.bmp              operator_quotient.bmp \
  aero_icon.xpm        kinemat.xpm              operator_quotient.xpm \
  ap_icon.bmp          lag.bmp                  operator_sin.bmp \
  ap_icon.xpm          lag.xpm                  operator_sin.xpm \
  arrow.bmp            ledlag.bmp               operator_sum.bmp \
  arrow.xpm            ledlag.xpm               operator_sum.xpm \
  axis.bmp             mass_icon.bmp            operator_tan.bmp \
  axis.xpm             mass_icon.xpm            operator_tan.xpm \
  cutpoint.bmp         metrics_icon.bmp         output_icon.bmp \
  cutpoint.xpm         metrics_icon.xpm         output_icon.xpm \
  deadband.bmp         mnv_mgr.bmp              property.bmp \
  deadband.xpm         mnv_mgr.xpm              property_icon.bmp \
  del.bmp              newpoint.bmp             property_icon.xpm \
  del.xpm              newpoint.xpm             property.xpm \
  destination.bmp      node.bmp                 reverse.bmp \
  destination.xpm      node.xpm                 reverse.xpm \
  detail.bmp           operator_abs.bmp         rslt_mgr.bmp \
  detail.xpm           operator_abs.xpm         rslt_mgr.xpm \
  do_mnv.bmp           operator_acos.bmp        scdorder.bmp \
  do_mnv.xpm           operator_acos.xpm        scdorder.xpm \
  dupl.bmp             operator_asin.bmp        source.bmp \
  dupl.xpm             operator_asin.xpm        source.xpm \
  engine_icon.bmp      operator_atan.bmp        straight.bmp \
  engine_icon.xpm      operator_atan.xpm        straight.xpm \
  eng_mgr.bmp          operator_cos.bmp         summer.bmp \
  eng_mgr.xpm          operator_cos.xpm         summer.xpm \
  fcs_icon.bmp         operator_derivative.bmp  switch.bmp \
  fcs_icon.xpm         operator_derivative.xpm  switch.xpm \
  fileheader_icon.bmp  operator_difference.bmp  table_icon.bmp \
  fileheader_icon.xpm  operator_difference.xpm  table_icon.xpm \
  filter.bmp           operator_func.bmp        value_icon.bmp \
  filter.xpm           operator_func.xpm        value_icon.xpm \
  gain.bmp             operator_integral.bmp    washout.bmp \
  gain.xpm             operator_integral.xpm    washout.xpm \
  mgr.bmp wait.bmp     general.bmp              channel.bmp \
  mgr.xpm wait.xpm     general.xpm              channel.xpm \
  AVIC_logo.bmp        JSBSim_logo.bmp          NUAA_logo.bmp  \
  AVIC_logo.xpm        JSBSim_logo.xpm          NUAA_logo.xpm  \
  myclose.bmp          mynew.bmp                wxWidgets_logo.bmp \
  myclose.xpm          mynew.xpm                wxWidgets_logo.xpm \
  myopen.bmp           mysaveas.bmp             mysave.bmp \
  myopen.xpm           mysaveas.xpm             mysave.xpm \
  piston_engine.bmp    rocket_engine.bmp        script.bmp \
  piston_engine.xpm    rocket_engine.xpm        script.xpm \
  turbine_engine.xpm   propeller.xpm            nozzle.xpm \
  turbine_engine.bmp   propeller.bmp            nozzle.bmp \
  func.bmp             direct.bmp               electric_engine.bmp \
  func.xpm             direct.xpm               electric_engine.xpm \
  tank.xpm             failure.xpm              success.xpm \
  tank.bmp             failure.bmp              success.bmp \
  pause.xpm            running.xpm              aircraft.xpm \
  pause.bmp            running.bmp              aircraft.bmp \
  snap.xpm             operator_lt.xpm          operator_le.xpm \
  snap.bmp             operator_lt.bmp          operator_le.bmp \
  operator_ge.xpm      operator_gt.xpm          operator_eq.xpm \
  operator_ge.bmp      operator_gt.bmp          operator_eq.bmp \
  operator_ne.xpm      operator_and.xpm         operator_or.xpm \
  operator_ne.bmp      operator_and.bmp         operator_or.bmp \
  operator_not.xpm     operator_ifthen.xpm      ogl.xpm\
  operator_not.bmp     operator_ifthen.bmp      ogl.ico\
  pid.xpm              pid.bmp			sensor.xpm \
  sensor.bmp           actuator.bmp     actuator.xpm