AM_CPPFLAGS = -I$(top_srcdir)/src -I$(top_srcdir)/src/math \
              -I$(top_srcdir)/src/input_output -I$(top_srcdir)/src/simgear/xml

noinst_LIBRARIES = libMath.a

libMath_a_SOURCES = FGColumnVector3.cpp \
                    bspline.cpp bsplines.cpp \
                    Matt1D.cpp MattMD.cpp \
                    FGFunction.cpp FGRealValue.cpp FGPropertyValue.cpp FGTable.cpp

noinst_HEADERS = FGColumnVector3.h \
                 bspline.h bsplines.h \
                 Matt1D.h MattMD.h \
                 FGParameter.h \
                 FGFunction.h FGRealValue.h FGPropertyValue.h FGTable.h

