AM_CPPFLAGS = -I$(top_srcdir)/src -DwxUSE_DEPRECATED=1 -DwxUSE_PROLOGIO=1 ${WX_CXXFLAGS}

noinst_LIBRARIES = libOGL.a

libOGL_a_SOURCES = basic2.cpp  bmpshape.cpp  composit.cpp  divided.cpp  lines.cpp    ogldiag.cpp basic.cpp   canvas.cpp    constrnt.cpp  drawn.cpp    mfutils.cpp  oglmisc.cpp

noinst_HEADERS = basic.h     canvas.h    divided.h  lines.h    misc.h basicp.h    composit.h  drawn.h    linesp.h   ogldiag.h bmpshape.h  constrnt.h  drawnp.h   mfutils.h  ogl.h

