
AM_CPPFLAGS = -I$(top_srcdir)/src \
              ${WX_CXXFLAGS}

noinst_LIBRARIES = libPlot.a

libPlot_a_SOURCES = plot.cpp

noinst_HEADERS = plot_dwn.xpm  plot.h plot_up.bmp   plot_zin.xpm  wxplot.rc \
                 plot_enl.bmp  plot_shr.bmp  plot_up.xpm   plot_zot.bmp \
                 plot_dwn.bmp  plot_enl.xpm  plot_shr.xpm  plot_zin.bmp  \
                 plot_zot.xpm

